--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@
   padding: auto;
   width: 200px;
   border-radius: 7px;
+  border: 1px solid red;
 }
 .line {
   height: 10px;
@@ -136,6 +137,7 @@ nav button {
   width: 75px;
   height: 30px;
   border-radius: 5px;
+  border: 1px solid red;
 }
 .box4 {
   width: 80vw;
@@ -265,18 +267,60 @@ nav button {
   display: grid;
   grid-template-columns: 1fr;
 
-  justify-content:center ;
   margin: auto;
   color: white;
-  align-items:center ;
+
   gap: 10px;
 }
 .container {
-  height: 75px;
-  width: 80vw;
-  background-color: rgb(59, 59, 59);font-size: 23px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 80px;
+  width: 70vw;
+  background-color: rgb(59, 59, 59);
+  font-size: 23px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 23px;
+  padding-right: 23px;
+  margin: auto;
 }
-.heading{ font-size: 48px;
+.heading {
+  font-size: 48px;
   font-weight: 900;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;text-align: center;
-}}
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+.box7 :nth-child(8) {
+  font-size: 23px;
+  font-weight: 400;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  margin-top: 23px;
+}
+.input2{
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+.input2 input {
+  background-color: black;
+  font-size: 16px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  width: 400px;
+  height: 23px;
+  padding: 15px;
+  border-radius: 7px;
+}
+.input2 button {
+  background-color: red;
+  height: 55px;
+  color: white;
+  font-size: 23px;
+  font-weight: 700;
+  padding: auto;
+  width: 200px;
+  border-radius: 7px;
+  border: 1px solid red;
+}
