--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   padding: 0;
 }
 .background {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url(1.jpg);
   background-repeat: no-repeat;
@@ -15,7 +15,7 @@
 }
 .box {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: black;
   opacity: 0.65;
   display: flex;
@@ -76,12 +76,12 @@
 }
 .line {
   height: 10px;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(88, 88, 88);
 }
 .box2 {
   height: 75vh;
-  width: 100vw;
+  width: 100%;
   background-color: black;
 }
 .box3 {
@@ -91,6 +91,7 @@
   flex-direction: row;
   flex-flow: column wrap;
   justify-content: center;
+  align-items: center;
   margin: auto;
   color: white;
 }
@@ -115,7 +116,13 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .box3 img {
-  width: 500px;
+  width: 450px;
+  z-index: 1000;
+}
+.box3 video {
+  position: relative;
+right: 400px;
+  width: 350px;
 }
 nav {
   height: 60px;
@@ -298,7 +305,7 @@ nav button {
   text-align: center;
   margin-top: 23px;
 }
-.input2{
+.input2 {
   display: flex;
   justify-content: center;
   gap: 12px;
@@ -323,4 +330,16 @@ nav button {
   width: 200px;
   border-radius: 7px;
   border: 1px solid red;
+}
+.box8 {
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+.box8 a:link {
+  text-decoration: none;
+  color: white;
 }
